fixing weird mobile alignment?

--- a/src/style/sass/_projects_mobile.scss
+++ b/src/style/sass/_projects_mobile.scss
@@ -62,6 +62,7 @@
                         line-height: 1.2;
                     }
                     .project-tags {
+                        align-items: left;
                         margin-top: 15px;
                         gap: 5px;
                         .tag {
